Main slogan font size to big on moblie devices, header not extending at 100vh, footer is not stuck to the bottom of page. All those errors were due to the last branch push. This commit should fix some that.

--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ body {
 main {
   width: 100%;
   padding: 20px;
-  height: 100vh;
+
 }
 
 footer {
@@ -45,9 +45,10 @@ footer {
     width: 100%;
     height: auto;
     color: white;
+    clear: both;
 }
 
-.header-slogan {
+.main-slogan {
   color: greenyellow;
   text-align: center;
   font-weight: 700;
@@ -63,6 +64,7 @@ footer {
 .header-slogan-container {
   width: 100%;
   height: auto;
+  
 }
 
 .header-slogan-img {
@@ -70,10 +72,7 @@ footer {
   box-shadow: 0 0 10px black;
 }
 
-.main-bg {
-  margin-left: auto;
-  margin-right: auto;
-}
+
 
 .header-btn {
   position: relative;
@@ -105,7 +104,7 @@ footer {
   margin: 3px;
 }
 
-.header-text {
+.main-text {
   color: whitesmoke;
   font-weight: 600;
   text-shadow: 0 0 10px black;
@@ -114,16 +113,19 @@ footer {
 
 /*Media Queries*/
 @media (max-width: 375px) {
+  body {
+    height: 100vh;
+  }
   header {
     flex-direction: column;
   }
-  .header-slogan {
+  .main-slogan {
     font-size: 5rem;
   }
    #brand-name {
     font-size: 1rem;
   }
-  .header-slogan {
+  .main-slogan {
     font-size: 4rem;
   }
   .main-bg {
@@ -160,6 +162,70 @@ footer {
   #brand-name {
     font-size: 1rem;
   }
+  .main-slogan {
+    font-size: 2rem;
+  }
+  .main-bg {
+    flex-direction: column;
+  }
+  .main-text {
+    font-size: 1rem;
+  }
+  #header-link {
+    font-size: 0.8rem;
+  }
+  .header-btn {
+    position: relative;
+    right: 50px;
+    font-size: 0.8rem;
+    bottom: 13px;
+  }
+  .footer-title, .footer-text {
+    font-size: 0.7rem;
+  }
+}
+
+@media (max-width: 520px) {
+  #brand-name {
+    font-size: 1.6rem;
+  }
+  .svg-icon {
+    height: 26px;
+    width: 26px;
+  }
+  .main-slogan {
+    font-size: 2.5rem;
+  }
+  .main-bg {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .main-text {
+    font-size: 1.5rem;
+  }
+  #header-link {
+    font-size: 1.2rem;
+  }
+  .header-btn {
+    position: relative;
+    right: 50px;
+    font-size: 1rem;
+    top: 20px;
+  }
+  .header-img-container {
+    position: relative;
+    top: 100px;
+  }
+  .footer-title, .footer-text {
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 560px) {
+  #brand-name {
+    font-size: 1rem;
+  }
   .header-slogan {
     font-size: 2rem;
   }
@@ -178,23 +244,15 @@ footer {
     font-size: 0.8rem;
     bottom: 13px;
   }
-
-  .footer {
-    position: sticky;
-    bottom: 0;
-    width: 100%;
-  }
-
   .footer-title, .footer-text {
     font-size: 0.7rem;
   }
 }
-
 @media (max-width: 630px) {
      
 }
 
-@media (max-width: 2532px) and (max-height: 1170px) {
+/*@media (max-width: 2532px) and (max-height: 1170px) {
   header {
     flex-direction: column;
   }
@@ -237,4 +295,4 @@ footer {
   .header-img-container {
     
   }
-}
+}*/
